# win-terminal-commands

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.txt
.claude/skills/create-command/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/commands/: gzip.md  md5.md  open.md  say.md  sw_vers.md  which.md
src/: gzip.rs  lib.rs
