[package]
name = "win-terminal-commands"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "which"
path = "src/bin/which.rs"

[[bin]]
name = "open"
path = "src/bin/open.rs"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Foundation",
    "Foundation_Collections",
    "Media_Core",
    "Media_SpeechSynthesis",
    "Storage_Streams",
    "Win32_System_WinRT",
] }
