[package]
name = "win-terminal-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
# gzip/gunzip use DEFLATE (RFC 1951). The pure-Rust `rust_backend`
# (miniz_oxide) keeps the build dependency-free on the C side, so it works
# with both the MSVC and GNU toolchains.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[[bin]]
name = "which"
path = "src/bin/which.rs"

[[bin]]
name = "open"
path = "src/bin/open.rs"
